# mgrep

./: LICENSE  README.md  mgrep.cabal  mgrep.hs
Data/Text/: AhoCorasick.hs  RabinKarp.hs
